--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
     "dev:wds": "webpack-dev-server --progress",
     "prod:build":
-      "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
-    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
-    "prod:stop": "pm2 delete server",
+      "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p",
+    "prod:start": "heroku local",
     "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
     "test":
       "yarn lint && flow && jest --coverage && codecov --token=d5eaf82c-3286-454a-937e-85ec6c59d9d2",
     "precommit": "yarn test",
-    "prepush": "yarn test && yarn prod:build"
+    "prepush": "yarn test && yarn prod:build",
+    "heroku-postbuild": "yarn prod:build"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -66,11 +66,14 @@
     "husky": "^0.14.3",
     "jest": "^22.4.2",
     "nodemon": "^1.17.1",
-    "pm2": "^2.10.1",
     "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
+  },
+  "engines": {
+    "node": "7.x",
+    "yarn": "0.20.3"
   }
 }
