fix: prod:start script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:wds": "webpack-dev-server --progress",
     "prod:build":
       "rimraf lib dist && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p",
-    "prod:start": "heroku local",
+    "prod:start": "cross-env NODE_ENV=production heroku local",
     "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
     "test":
       "yarn lint && flow && jest --coverage && codecov --token=d5eaf82c-3286-454a-937e-85ec6c59d9d2",
